[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chaoslab"
version = "0.1.0"
description = "Double-pendulum chaos explorer: exact Lagrangian dynamics, Lyapunov exponents, and the fractal flip-time map — validated against analytic mechanics"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["numpy>=1.24", "matplotlib>=3.7"]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4", "pillow>=10"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "NPY"]
